login and signup forms complete

--- a/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
+++ b/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
@@ -7,6 +7,10 @@ body{
     color: darkslategrey;
 }
 
+.bg_default{
+  background-color: #f4ece2;
+}
+
 .bg_orange{
     background-color: rgb(244, 183, 91) !important;
     color: aliceblue !important;
