--- a/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
+++ b/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
@@ -2,6 +2,26 @@ body{
     font-family: monaco, Consolas, "Lucida Console", monospace;
 }
 
+.div_body{
+    padding-left: 300px;
+}
+.zoom {
+  background-color: green!important;
+  object-fit: cover;
+  transition: transform .2s!important; 
+  width: 500px!important;
+  height: 500px!important;
+  max-width: 700px !important;
+  max-height: 700px !important; 
+  margin: 0 auto!important;
+}
+
+.zoom:hover {
+  object-fit: fill;
+  transform: scale(1.5); 
+
+}
+
 .bg_white{
     background-color: rgb(251, 250, 248) !important;
     color: darkslategrey;
