--- a/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
+++ b/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
@@ -1,239 +1,217 @@
-body{
-    font-family: monaco, Consolas, "Lucida Console", monospace;
+body {
+  font-family: monaco, Consolas, "Lucida Console", monospace;
 }
 
-.div_body{
-    padding-left: 300px;
+.div_body {
+  padding-left: 300px;
 }
 .zoom {
-  background-color: green!important;
+  background-color: #ffffff !important;
   object-fit: cover;
-  transition: transform .2s!important; 
-  width: 500px!important;
-  height: 500px!important;
+  transition: transform 0.2s !important;
+  width: 500px !important;
+  height: 500px !important;
   max-width: 700px !important;
-  max-height: 700px !important; 
-  margin: 0 auto!important;
+  max-height: 700px !important;
+  margin: 0 auto !important;
 }
-
+.hidden {
+  display: none;
+}
 .zoom:hover {
   object-fit: fill;
-  transform: scale(1.5); 
-
+  transform: scale(1.5);
 }
 
-.bg_white{
-    background-color: rgb(251, 250, 248) !important;
-    color: darkslategrey;
+.bg_white {
+  background-color: #fbfaf8 !important;
+  color: darkslategrey;
 }
 
-.bg_default{
+.bg_default {
   background-color: #f4ece2;
 }
 
-.bg_orange{
-    background-color: rgb(244, 183, 91) !important;
-    color: aliceblue !important;
-};
-
-.bg_slategrey{
-    background-color: darkslategrey !important;
-    color: aliceblue;
+.bg_orange {
+  background-color: #f4b75b !important;
+  color: aliceblue !important;
+  margin: 10px;
 }
 
-.border50{
-    border-radius: 50px !important;
+.bg_slategrey {
+  background-color: darkslategrey !important;
+  color: aliceblue;
 }
 
+.border50 {
+  border-radius: 50px !important;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 /* width */
 ::-webkit-scrollbar {
-    width: 10px !important;
-    height: 10px !important;
-  }
+  width: 10px !important;
+  height: 10px !important;
+}
 
 /* Track */
 ::-webkit-scrollbar-track {
-background: #f1f1f1; 
-border-radius: 100px;
+  background: #f1f1f1;
+  border-radius: 100px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-background: #888; 
-border-radius: 100px;
+  background: #888;
+  border-radius: 100px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-background: #555; 
+  background: #555;
 }
-
-
-
 
 /* Footer */
-.site-footer
-{
+.site-footer {
   margin-top: 100px;
-  padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
-  background: rgb(244,236,226);
-background: linear-gradient(180deg, rgba(244,236,226,1) 0%, rgba(234,218,198,1) 33%, rgba(231,213,190,1) 100%);
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  background: #f4ece2;
+  background: linear-gradient(180deg, #f4ece2 0%, #eadac6 33%, #e7d5be 100%);
 }
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
 }
-.site-footer hr.small
-{
-  margin:20px 0
+.site-footer hr.small {
+  margin: 20px 0;
 }
-.site-footer h6
-{
+.site-footer h6 {
   color: darkslategrey;
-  font-size:16px;
-  text-transform:uppercase;
-  margin-top:5px;
-  letter-spacing:2px
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
-.site-footer a
-{
-  color:#737373;
+.site-footer a {
+  color: #737373;
 }
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
 }
-.footer-links
-{
-  padding-left:0;
-  list-style:none
+.footer-links {
+  padding-left: 0;
+  list-style: none;
 }
-.footer-links li
-{
-  display:block
+.footer-links li {
+  display: block;
 }
-.footer-links a
-{
-  color:#737373
+.footer-links a {
+  color: #737373;
 }
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
 }
-.footer-links.inline li
-{
-  display:inline-block
+.footer-links.inline li {
+  display: inline-block;
 }
-.site-footer .social-icons
-{
-  text-align:right
+.site-footer .social-icons {
+  text-align: right;
 }
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
 }
-.copyright-text
-{
-  margin:0
+.copyright-text {
+  margin: 0;
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
   }
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
   }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
   }
 }
-.social-icons
-{
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
-.social-icons li
-{
-  display:inline-block;
-  margin-bottom:4px
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
 }
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:#96a2b2;
-  font-weight:700;
-  font-size:13px
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
 }
-.social-icons a{
-  background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
-  display:inline-block;
-  line-height:44px;
-  width:44px;
-  height:44px;
-  text-align:center;
-  margin-right:8px;
-  border-radius:100%;
-  -webkit-transition:all .2s linear;
-  -o-transition:all .2s linear;
-  transition:all .2s linear
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
-  color:#fff;
-  background-color:#29aafe
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
 }
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
 }
-.social-icons a.facebook:hover
-{
-  background-color:#3b5998
+.social-icons a.facebook:hover {
+  background-color: #3b5998;
 }
-.social-icons a.twitter:hover
-{
-  background-color:#00aced
+.social-icons a.twitter:hover {
+  background-color: #00aced;
 }
-.social-icons a.linkedin:hover
-{
-  background-color:#007bb6
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
 }
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89;
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
   }
 }
