resolved some bugs and added signout function

--- a/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
+++ b/apache-tomcat-10.1.5/webapps/oldegg/style/style.css
@@ -38,6 +38,12 @@ body {
   margin: 10px;
 }
 
+.bg_red {
+  background-color: #db3734 !important;
+  color: aliceblue !important;
+  margin: 10px;
+}
+
 
 
 .bg_slategrey {
