--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -9,26 +9,41 @@
     android:paddingTop="60dp"
     android:paddingBottom="60dp">
 
+    <TextView
+        android:id="@+id/mainTextName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textStyle="bold" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/btnSend"
         android:layout_weight="2"
-        android:onClick="linkToXX" />
+        android:id="@+id/option1Button"
+        android:onClick="option1" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"></Button>
+        android:layout_weight="2"
+        android:id="@+id/option2Button"
+        android:onClick="option2" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"></Button>
+        android:layout_weight="2"
+        android:id="@+id/option3Button"
+        android:onClick="option3" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"></Button>
+        android:layout_weight="2"
+        android:id="@+id/option4Button"
+        android:onClick="option4" />
+
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
