--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat android:weightSum="8"
+<androidx.appcompat.widget.LinearLayoutCompat
+    android:background="@color/bahootBackground"
+    android:weightSum="8"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -14,6 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="60sp"
         android:textStyle="bold" />
 
     <Button
@@ -24,13 +28,14 @@
         android:onClick="option1" />
 
     <Button
+        android:id="@+id/option2Button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:id="@+id/option2Button"
         android:onClick="option2" />
 
     <Button
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
@@ -43,7 +48,5 @@
         android:layout_weight="2"
         android:id="@+id/option4Button"
         android:onClick="option4" />
-
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
