--- a/Android App/app/src/main/res/layout/activity_register.xml
+++ b/Android App/app/src/main/res/layout/activity_register.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register">
+    tools:context=".Register"
+    android:background="@color/bahootBackground">
 
-    <EditText
-        android:id="@+id/registerNameField"
-        android:layout_width="232dp"
-        android:layout_height="55dp"
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="120dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
+        android:layout_marginTop="64dp"
+        android:text="@string/registerText"
+        android:textColor="#FFFFFF"
+        android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/registerEmailField"
+        android:id="@+id/registerPhoneNumberField"
         android:layout_width="232dp"
         android:layout_height="55dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="536dp"
+        android:background="@drawable/ic_launcher_background"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:hint="@string/prompt_email"
-        android:inputType="textPersonName"
+        android:hint="@string/phone_number"
+        android:inputType="phone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +40,9 @@
         android:layout_width="232dp"
         android:layout_height="55dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="304dp"
+        android:layout_marginTop="352dp"
+        android:background="@drawable/ic_launcher_background"
+        android:backgroundTint="@color/white"
         android:ems="10"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
@@ -47,22 +54,40 @@
         android:layout_width="232dp"
         android:layout_height="55dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="448dp"
+        android:background="@drawable/ic_launcher_background"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="@string/confirm_password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/registerPhoneNumberField"
+        android:id="@+id/registerEmailField"
         android:layout_width="232dp"
         android:layout_height="55dp"
         android:layout_marginStart="88dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="260dp"
+        android:background="@drawable/ic_launcher_background"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:hint="Phone Number"
-        android:inputType="phone"
+        android:hint="@string/prompt_email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/registerNameField"
+        android:layout_width="232dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/ic_launcher_background"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:hint="@string/name"
+        android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,13 +95,13 @@
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="580dp"
-        android:text="Register"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="632dp"
+        android:backgroundTint="@color/bahootButton"
         android:onClick="register"
+        android:text="@string/registerText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
