--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,10 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingStart="40dp"
-    android:paddingEnd="40dp"
-    android:paddingTop="60dp"
-    android:paddingBottom="60dp">
+    android:paddingEnd="40dp">
 
     <TextView
-        android:id="@+id/mainTextName"
+        android:id="@+id/questionNumberText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -48,5 +46,13 @@
         android:layout_weight="2"
         android:id="@+id/option4Button"
         android:onClick="option4" />
+
+    <Button
+        android:id="@+id/nextQuestionButton"
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_question"
+        android:onClick="nextQuestionCheck"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
