--- a/Android App/app/src/main/res/layout/activity_room_code.xml
+++ b/Android App/app/src/main/res/layout/activity_room_code.xml
@@ -9,8 +9,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
+    <ImageView
+        android:layout_gravity="center"
+        android:id="@+id/imageView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@mipmap/bahoot_foreground" />
+
     <TextView
-        android:layout_marginTop="150dp"
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
