--- a/Android App/app/src/main/res/values/colors.xml
+++ b/Android App/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bahootBackground">#46178F</color>
-    <color name="bahootButton">#2196F3</color>
+    <color name="bahootButton">#0275D8</color>
 </resources>
