--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:text="Question"
             android:textColor="@color/white"
-            android:textSize="40sp"
+            android:textSize="35dp"
             android:textStyle="bold" />
 
         <ImageView
