--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -83,16 +83,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginEnd="108dp"
+
             android:backgroundTint="#d9534f"
             android:onClick="comment"
             android:text="Comment"
             android:textColor="#FFFFFF" />
+
+        <TextView
+            android:id="@+id/scoreText"
+            android:layout_width="108dp"
+            android:layout_height="wrap_content"
+            android:text="Score"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/nextQuestionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:backgroundTint="#d9534f"
             android:onClick="nextQuestionButton"
             android:text="@string/next_question"
