--- a/Android App/app/src/main/res/layout/activity_main.xml
+++ b/Android App/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,7 @@
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/bahoot"
-            android:onClick="logOut"/>
+            app:srcCompat="@mipmap/bahoot" />
 
         <TextView
             android:id="@+id/questionNumberText"
@@ -35,16 +34,30 @@
             android:id="@+id/imageView7"
             android:layout_width="75dp"
             android:layout_gravity="center"
-            app:srcCompat="@android:drawable/ic_menu_myplaces" />
+            app:srcCompat="@android:drawable/ic_menu_myplaces"
+            android:onClick="logOut"/>
 
     </TableRow>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:max="20"
+        android:minHeight="50dp"
+        android:minWidth="200dp"
+        android:progress="0"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/option1Button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-
+        android:layout_weight="1.75"
         android:backgroundTint="#0275D8"
         android:onClick="option1"
         android:textColor="#FFFFFF" />
@@ -53,7 +66,7 @@
         android:id="@+id/option2Button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.75"
         android:backgroundTint="#5cb85c"
         android:onClick="option2"
         android:textColor="#FFFFFF" />
@@ -63,7 +76,7 @@
         android:id="@+id/option3Button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.75"
         android:backgroundTint="#5bc0de"
         android:onClick="option3" />
 
@@ -71,7 +84,7 @@
         android:id="@+id/option4Button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.75"
         android:backgroundTint="#f0ad4e"
         android:onClick="option4" />
     <TableRow
@@ -81,9 +94,8 @@
         <Button
             android:id="@+id/commentButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="start"
-
             android:backgroundTint="#d9534f"
             android:onClick="comment"
             android:text="Comment"
@@ -91,10 +103,10 @@
 
         <TextView
             android:id="@+id/scoreText"
-            android:layout_width="108dp"
-            android:layout_height="wrap_content"
-            android:text="Score"
+            android:layout_width="102dp"
+            android:layout_height="37dp"
             android:layout_gravity="center"
+            android:text="Score"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp"
