--- a/Android App/app/src/main/res/layout/activity_room_code.xml
+++ b/Android App/app/src/main/res/layout/activity_room_code.xml
@@ -1,50 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/bahootBackground"
-    android:weightSum="8"
-    android:layout_height="match_parent"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+    android:layout_height="match_parent"
+    android:background="@color/bahootBackground">
 
     <ImageView
-        android:layout_gravity="center"
         android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        app:srcCompat="@mipmap/bahoot_foreground" />
+        android:contentDescription="@string/bahoot_description"
+        android:src="@mipmap/bahoot_foreground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/inter_extra_bold"
         android:text="@string/enter_room_code"
-        android:textColor="#FFFFFF"
-        android:textSize="50sp"/>
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/roomCodeField"
+        android:id="@+id/room_code_field"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:background="@drawable/ic_launcher_background"
         android:backgroundTint="@color/white"
         android:ems="6"
         android:hint="@string/room_code"
         android:inputType="number"
-        android:maxLength="6" />
+        android:maxLength="6"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/enterButton"
-        android:layout_gravity="center"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/bahootButton"
+        android:text="@string/enter"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:fontFamily="@font/roboto"
         android:onClick="enterRoomCode"
-        android:text="@string/enter"/>
-</androidx.appcompat.widget.LinearLayoutCompat>
+        app:layout_constraintTop_toBottomOf="@+id/room_code_field"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
